# gDetour

./: .gitignore  README.md  agpl3-header.txt  compile_svelte.sh  index.html  licenserc.toml  package-lock.json  pyproject.toml  rollup.config.js  run.py  run.spec  svelte.config.js  vite.config.js
app/: main.py  network.py  sacn_manager.py  websocket_server.py
backend/: __init__.py
backend/static/: index.html
backend/static/assets/: index-14264141.js  index-2ee83d83.css  index-319a2b57.js  index-3220dc2f.js  index-3889cbdc.js  index-8887144e.css  index-9c807be4.js  index-Cu8cn6f3.js  index-Cuwdqwqq.css  index-c0d38951.js  index-e95dfd60.js
frontend/: compile_svelte.ps1  compile_svelte.sh  package-lock.json  package.json
frontend/src/: App.svelte  ButtonEdge.svelte  ButtonOneToMany.svelte  DMXControl.svelte  DmxMapping.svelte  DownloadButton.svelte  Edges.svelte  Flow.svelte  Mappings.svelte  Modes.svelte  WebSocketHandler.svelte  main.js
src/: App.svelte  ButtonEdge.svelte  ButtonSelectSameAttribute.svelte  Edges.svelte  Flow.svelte  GdtfFile.svelte  Modes.svelte  WebSocketHandler.svelte  app.css  flow_stores.js
